<resources>
    <string name="app_name">Meals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="recipes">Recipes</string>
    <string name="search">Search</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="lore_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
</resources>