<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".activities.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_details_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/txt_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="4dp"
            android:textColor="@color/colorTextOthers"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_food"
            app:drawableTint="@color/colorTextOthers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_details_image"
            tools:text="TextView" />

        <TextView
            android:id="@+id/txt_details_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="4dp"
            android:textColor="@color/colorThemeExtra"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/colorThemeExtra"
            app:layout_constraintStart_toStartOf="@+id/txt_details_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_details_name"
            tools:text="Region" />

        <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="4dp"
            android:textColor="@color/colorAccent1"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_category"
            app:drawableTint="@color/colorAccent1"
            app:layout_constraintStart_toStartOf="@+id/txt_details_region"
            app:layout_constraintTop_toBottomOf="@+id/txt_details_region"
            tools:text="Category" />

        <TextView
            android:id="@+id/txt_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="4dp"
            android:textColor="#68DA29"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_tag"
            app:drawableTint="#68DA29"
            app:layout_constraintStart_toStartOf="@+id/txt_category"
            app:layout_constraintTop_toBottomOf="@+id/txt_category"
            tools:text="Tags" />

        <TextView
            android:id="@+id/txt_details_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:padding="4dp"
            android:textColor="#009688"
            android:textSize="@dimen/_13ssp"
            app:drawableStartCompat="@drawable/ic_baseline_link_ic_link"
            app:drawableTint="#009688"
            app:layout_constraintStart_toStartOf="@+id/txt_tags"
            app:layout_constraintTop_toBottomOf="@+id/txt_tags"
            tools:text="Link" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_details_link" />

        <TextView
            android:id="@+id/txt_details_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="true"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="@string/lore_ipsum" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>